--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 :root {
   --primaryColor: #fff;
   --navColor1: #21292c;
@@ -16,12 +14,92 @@ html {
 body {
   margin: 0;
   background: #000;
-
 }
 
 /* --- Navigation Menu ------------------------------ */
+.overlay {
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7);
+}
+/* Nav menu Items */
+nav,
+nav ul {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  list-style: none;
+}
 
+nav ul li {
+  height: 20%;
+  overflow: hidden;
+}
 
+nav li a {
+  position: relative;
+  top: 45%;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+nav li a:hover {
+  transform: scale(1.1);
+}
+nav li a::before {
+  content: "";
+  width: 25vw;
+  background: #fff;
+  position: absolute;
+  top: 47.5%;
+  left: 0;
+  height: 3px;
+  opacity: 0;
+}
+nav li a::after {
+  content: "";
+  width: 25vw;
+  background: #fff;
+  position: absolute;
+  top: 47.5%;
+  right: 0;
+  height: 3px;
+  opacity: 0;
+}
+nav li a:hover::before,
+nav li a:hover::after {
+  opacity: 1;
+}
+
+nav li:nth-of-type(1) {
+  background: var(--navColor1);
+}
+nav li:nth-of-type(2) {
+  background: var(--navColor2);
+}
+nav li:nth-of-type(3) {
+  background: var(--navColor3);
+}
+nav li:nth-of-type(4) {
+  background: var(--navColor4);
+}
+nav li:nth-of-type(5) {
+  background: var(--navColor5);
+}
 
 /* --- Menu Bars ------------------------------------ */
 
